# ai-hackathon

./: .env  .env.example  Dockerfile  Makefile  app.py  backend_core.py  db_lancedb.py  docker-compose.yaml  docker-compose.yml  embed_modal.py  entrypoint.sh  geo_utils.py  google_sa.json  location_modal.py  main.py  postprocess_modal.py  pyproject.toml  requirements.txt  script.py  seed_fake_restaurants.py  user_repo.py
business/: query_restaurant.py
data/lancedb/restaurants.lance/_transactions/: 0-12c23bce-c614-4cdc-aabb-3e92ccace571.txn  0-6ada36a4-9d6d-465d-98f9-905780a7e61f.txn  1-b8eb8134-8770-4cae-ad05-956f73171a00.txn  1-c039fb8a-23fd-4a08-94a2-e71a42250e2b.txn  10-e7bcdf37-11b8-46e9-a9d4-c41ff768f8ff.txn  11-f34465c3-2fff-413d-8fe5-8ee897acf582.txn  12-5886b5b0-d7d2-45bb-8da5-fcf734002061.txn  2-60a4651b-86a6-4e28-91dc-35d63945a8a6.txn  3-29441ba3-e449-45d2-b7dd-72e891df4037.txn  4-c75e79c6-4015-4406-ae70-fd515c3ef6d9.txn  5-9b245c8e-de0f-4461-90eb-b02b9d07e169.txn  6-4aac2667-075c-4844-b06a-bb7260192ee5.txn  7-ef61e998-c5f2-47fb-8764-c3614e7d078c.txn  8-a51073dc-8830-4193-9a23-28196c4eb5de.txn  9-cf64f560-c58d-4a2b-b06e-e5b6f00ccbd8.txn
data/lancedb/restaurants.lance/_versions/: 1.manifest  10.manifest  (+11 more)
databases/mongo/: __init__.py  account.py  orm.py  partner.py
docker/: .dockerignore  Dockerfile
integrations/: gemini.py  google_auth.py  google_maps.py
models/: account.py  gemini.py  google_user.py  maps.py  partner.py  restaurant.py
routers/: __init__.py  account.py  partner.py  restaurant.py  token.py
utils/: constants.py  prompts.py
(+14 files in other folders)
